--- a/index.html
+++ b/index.html
@@ -147,7 +147,6 @@
               <div class="header__menu">
                 <i class="header__menu-close fas fa-times"></i>
 
-
                 <ul class="header__menu-list">
                   <li>
                     <a href="#!"
@@ -1087,6 +1086,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullpage.js@3/dist/fullpage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.Marquee/1.5.0/jquery.marquee.min.js"></script>
-    <script src="/js/main.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
