--- a/index.html
+++ b/index.html
@@ -30,41 +30,6 @@
     />
   </head>
   <body>
-    <!-- <div class="menu">
-      <div class="container">
-        <div class="menu__wrapper">
-          <a href="index.html" class="menu__wrapper-logo">
-            <img src="./images/logo.png" alt="this-is-logo" />
-          </a>
-
-          <img src="./images/bars.svg" alt="" class="btnMenu2" />
-          <div class="menu__wrapper-list">
-            <img class="menu__wrapper-close" src="./images/left.svg" alt="this-is-icon">
-            <ul>
-              <li>
-                <a href="#!">About</a>
-              </li>
-              <li>
-                <a href="#!">News</a>
-              </li>
-              <li>
-                <a href="#!">Exhibitions</a>
-              </li>
-              <li>
-                <a href="#!">Museum library</a>
-              </li>
-              <li>
-                <a href="#!">Visitor support</a>
-              </li>
-              <li>
-                <a href="#!">Database</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
     <div id="fullpage">
       <div class="section">
         <div class="wrapper-second">
@@ -145,8 +110,6 @@
               </a>
               <img src="./images/bars.svg" alt="" class="btnMenu" />
               <div class="header__menu">
-                <i class="header__menu-close fas fa-times"></i>
-
                 <ul class="header__menu-list">
                   <li>
                     <a href="#!"
@@ -163,6 +126,13 @@
                         alt="this-is-icon"
                       />News</a
                     >
+                    <ul class="header__submenu">
+                      <li><a href="#!">Activities - events</a></li>
+                      <li><a href="#!">Scientific research</a></li>
+                      <li><a href="#!">Environmental Education</a></li>
+                      <li><a href="#!">Inernational co-oporation</a></li>
+                      <li><a href="#!">Exhibition</a></li>
+                    </ul>
                   </li>
                   <li>
                     <a href="#!"
@@ -171,6 +141,15 @@
                         alt="this-is-icon"
                       />Exhibitions</a
                     >
+                    <ul class="header__submenu">
+                      <li><a href="#!">Fauna Exhibitions</a></li>
+                      <li><a href="#!">Folora Exhibitions</a></li>
+                      <li><a href="#!">Soil Exhibitions</a></li>
+                      <li><a href="#!">Insect Exhibitions</a></li>
+                      <li>
+                        <a href="#!">History of Vietnam Forestry exhibitions</a>
+                      </li>
+                    </ul>
                   </li>
                   <li>
                     <a href="#!"
@@ -179,6 +158,11 @@
                         alt="this-is-icon"
                       />Museum library</a
                     >
+                    <ul class="header__submenu">
+                      <li><a href="#!">Photo library</a></li>
+                      <li><a href="#!">Video Library</a></li>
+                      <li><a href="#!">Document Library</a></li>
+                    </ul>
                   </li>
                   <li>
                     <a href="#!"
@@ -306,8 +290,8 @@
         <div class="forest">
           <div class="container">
             <img src="./images/logo-forest.png" alt="this-is-img" />
-            <h1 class="forest__heading">
-              <a href="#!">VIETNAM FOREST RESOURCES MUSEUM</a>
+            <h1>
+              <a class="heading heading--primary" href="#!">VIETNAM FOREST RESOURCES MUSEUM</a>
             </h1>
             <img src="./images/forest-border.png" alt="" />
             <p class="forest__description">
