--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
     />
   </head>
   <body>
+
+    <div class="hotline">
+      <a href="#!" class="hotline__phone">
+        <i class="hotline__phone-icon fas fa-phone fa-3x"></i>
+      </a>
+      <div id="up-top">
+        <i class="fas fa-chevron-up"></i>
+      </div>
+    </div>
+
     <div id="fullpage">
       <div class="section">
         <div class="wrapper-second">
@@ -291,7 +301,9 @@
           <div class="container">
             <img src="./images/logo-forest.png" alt="this-is-img" />
             <h1>
-              <a class="heading heading--primary" href="#!">VIETNAM FOREST RESOURCES MUSEUM</a>
+              <a class="heading heading--primary" href="#!"
+                >VIETNAM FOREST RESOURCES MUSEUM</a
+              >
             </h1>
             <img src="./images/forest-border.png" alt="" />
             <p class="forest__description">
@@ -312,22 +324,30 @@
             </p>
             <div class="forest__count">
               <div class="forest__count-item">
-                <img src="./images/forest-1.png" alt="this-is-icon" />
+                <div class="forest__count-image">
+                  <img src="./images/forest-1.png" alt="this-is-icon" />
+                </div>
                 <span class="counter" data-count="2000"></span>
                 <p>Diện tích</p>
               </div>
               <div class="forest__count-item">
-                <img src="./images/forest-2.png" alt="this-is-icon" />
+                <div class="forest__count-image">
+                  <img src="./images/forest-2.png" alt="this-is-icon" />
+                </div>
                 <span class="counter" data-count="100"></span>
                 <p>Loài thực vật</p>
               </div>
               <div class="forest__count-item">
-                <img src="./images/forest-3.png" alt="this-is-icon" />
+                <div class="forest__count-image">
+                  <img src="./images/forest-3.png" alt="this-is-icon" />
+                </div>
                 <span class="counter" data-count="150"></span>
                 <p>Loài động vật</p>
               </div>
               <div class="forest__count-item">
-                <img src="./images/forest-4.png" alt="this-is-icon" />
+                <div class="forest__count-image">
+                  <img src="./images/forest-4.png" alt="this-is-icon" />
+                </div>
                 <span class="counter" data-count="200"></span>
                 <p>Khách tham quan</p>
               </div>
@@ -1054,15 +1074,6 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-
-    <div class="hotline">
-      <a href="#!" class="hotline__phone">
-        <i class="hotline__phone-icon fas fa-phone fa-3x"></i>
-      </a>
-      <div id="up-top">
-        <i class="fas fa-chevron-up"></i>
       </div>
     </div>
 
