--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
     />
   </head>
   <body>
-
     <div class="hotline">
-      <a href="#!" class="hotline__phone">
-        <i class="hotline__phone-icon fas fa-phone fa-3x"></i>
+      <a href="tel:+47333789018" class="hotline__phone">
+        <div class="hotline__phone-icon">
+          <i class="fas fa-phone fa-3x"></i>
+        </div>
       </a>
       <div id="up-top">
         <i class="fas fa-chevron-up"></i>
