--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BẢO TÀNG TÀI NGUYÊN RỪNG VIỆT NAM</title>
     <link rel="stylesheet" href="./css/home.css" />
+    <link rel="stylesheet" href="./css/global.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
@@ -123,7 +124,7 @@
               <div class="header__menu">
                 <ul class="header__menu-list">
                   <li>
-                    <a href="#!"
+                    <a href="about.html"
                       ><img
                         src="./images/menu-icon-1.png"
                         alt="this-is-icon"
@@ -897,7 +898,7 @@
         </div>
       </div>
       <div class="section">
-        <div class="footer">
+        <div class="footer-home">
           <div class="container">
             <a class="footer__logo" href="index.html">
               <img src="./images/logo.png" alt="this-is-logo" />
