--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     >
                   </li>
                   <li>
-                    <a href="#!"
+                    <a href="news.html"
                       ><img
                         src="./images/menu-icon-2.png"
                         alt="this-is-icon"
@@ -147,7 +147,7 @@
                     </ul>
                   </li>
                   <li>
-                    <a href="#!"
+                    <a href="exhibitions.html"
                       ><img
                         src="./images/menu-icon-3.png"
                         alt="this-is-icon"
@@ -164,7 +164,7 @@
                     </ul>
                   </li>
                   <li>
-                    <a href="#!"
+                    <a href="./library.html"
                       ><img
                         src="./images/menu-icon-4.png"
                         alt="this-is-icon"
@@ -177,7 +177,7 @@
                     </ul>
                   </li>
                   <li>
-                    <a href="#!"
+                    <a href="support.html"
                       ><img
                         src="./images/menu-icon-5.png"
                         alt="this-is-icon"
@@ -1083,6 +1083,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullpage.js@3/dist/fullpage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.Marquee/1.5.0/jquery.marquee.min.js"></script>
+    <script src="./js/home.js"></script>
     <script src="./js/main.js"></script>
   </body>
 </html>
