--- a/post.html
+++ b/post.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About</title>
+    <title>text</title>
     <link rel="stylesheet" href="./css/global.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
       rel="stylesheet"
     />
-
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
@@ -213,123 +212,199 @@
       <div class="container">
         <div class="content-wrapper">
           <div class="content-wrapper__left">
-            <h1><a class="title" href="#!"> About </a></h1>
+            <h1>
+              <a class="title" href="#!">
+                Introduction About VietNam Forest Musem
+              </a>
+            </h1>
+            <div class="date">
+              <span><i class="fa fa-calendar-alt"></i> 08/12/2022</span>
+              <span><i class="fa fa-eye"></i> 20 lượt xem</span>
+            </div>
+
+            <div class="content-wrapper__desc">
+              <p>
+                A study from 43 000 households across 27 countries in Africa
+                found that the dietary diversity of children exposed to forests
+                was at least 25% higher than that of children who were not. The
+                total number of plant species used for medicinal purposes could
+                be as high as 50 000. Several studies proved that a visit to a
+                forest environment lowers blood pressure and pulse rate, and
+                reduces cortisol levels. When we drink a glass of water, write
+                in a notebook, take medicine for a fever, or build a house, we
+                do not always make the connection with forests. And yet, these
+                and many other aspects of our lives are linked to forests in one
+                way or another.
+              </p>
+              <p>
+                Yet despite all these priceless ecological, economic, social and
+                health benefits, forests are endangered by fires, pests,
+                droughts, and unprecedented deforestation. The world is losing
+                10 million hectares of forest each year due to deforestation -
+                about the size of Iceland- and insects damage around 35 million
+                hectares of forest annually.”(FAO 2022). Forest sustainable
+                management and their use of resources are key to combating
+                climate change, and to contributing to the prosperity and
+                well-being of current and future generations. Forests also play
+                a crucial role in poverty alleviation and in the achievement of
+                the Sustainable Development Goals (SDGs).
+              </p>
+              <img src="./images/post-image.png" alt="this-is-image">
+              <p>
+                In 2012, the United Nations General Assembly proclaimed 21 March
+                is the International Day of Forests to celebrate and raise
+                awareness of the importance of all types of forests. Countries
+                are encouraged to undertake local, national and international
+                efforts to organize activities involving forests and trees, such
+                as tree planting campaigns. The theme for 2023 is "Forests and
+                health” since forests give us so much to our health. They purify
+                the water, clean the air, capture carbon to fight climate
+                change, provide food and life-saving medicines, and improve our
+                well-being. It’s up to us to safeguard these precious natural
+                resources. This 2023 calls for giving, not just taking, because
+                healthy forests will bring healthy people.
+              </p>
+              <p>
+                Contrary to popular belief, Lorem Ipsum is not simply random
+                text. It has roots in a piece of classical Latin literature from
+                45 BC, making it over 2000 years old. Richard McClintock, a
+                Latin professor at Hampden-Sydney College in Virginia, looked up
+                one of the more obscure Latin words, consectetur, from a Lorem
+                Ipsum passage, and going through the cites of the word in
+                classical literature, discovered the undoubtable source. Lorem
+                Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus
+                Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero,
+                written in 45 BC. This book is a treatise on the theory of
+                ethics, very popular during the Renaissance. The first line of
+                Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line
+                in section 1.10.32. The standard chunk of Lorem Ipsum used since
+                the 1500s is reproduced below for those interested. Sections
+                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
+                Cicero are also reproduced in their exact original form,
+                accompanied by English versions from the 1914 translation by H.
+                Rackham.
+              </p>
+            </div>
+
+            <h1>
+                <a href="#!" class="title">CÁC BÀI VIẾT KHÁC</a>
+            </h1>
 
             <div class="content-wrapper__main">
-              <div class="content-wrapper__item">
-                <a href="post.html" class="content-wrapper__image">
-                  <img
-                    src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
-                    alt="this-is-image"
-                  />
-                </a>
-                <div class="content-wrapper__content">
-                  <h3 class="title-link">
-                    <a href="post.html">Introduction About VietNam Forest Musem</a>
-                  </h3>
-                  <div class="date">
-                    <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
-                    <span><i class="fa fa-eye"></i> 17 lượt xem</span>
-                  </div>
-                  <p class="description">
-                    Vietnam Forest Museum is a civil service unit under Forest
-                    Inventory and Planning Institute (FIPI). The Museum takes
-                    over the functions to research, collect, store, display
-                  </p>
-                  <a class="button button--third" href="post.html">
-                    Xem chi tiết
-                    <img src="./images/more-right.png" alt="this-is-icon" />
+                <div class="content-wrapper__item">
+                  <a href="#!" class="content-wrapper__image">
+                    <img
+                      src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                      alt="this-is-image"
+                    />
                   </a>
-                </div>
-              </div>
-              <div class="content-wrapper__item">
-                <a href="post.html" class="content-wrapper__image">
-                  <img
-                    src="https://images.unsplash.com/photo-1503174971373-b1f69850bded?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1213&q=80"
-                    alt="this-is-image"
-                  />
-                </a>
-                <div class="content-wrapper__content">
-                  <h3 class="title-link">
-                    <a href="post.html"
-                      >Launching ceremony of vietnam forest museum and
-                      scientific workshop “establishment and development of
-                      vietnam forest museum"</a
-                    >
-                  </h3>
-                  <div class="date">
-                    <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
-                    <span><i class="fa fa-eye"></i> 17 lượt xem</span>
-                  </div>
-                  <p class="description">
-                    Vietnam Forest Museum is a civil service unit under Forest
-                    Inventory and Planning Institute (FIPI). The Museum takes
-                    over the functions to research, collect, store, display
-                  </p>
-                  <a class="button button--third" href="post.html">
-                    Xem chi tiết
-                    <img src="./images/more-right.png" alt="this-is-icon" />
-                  </a>
-                </div>
-              </div>
-              <div class="content-wrapper__item">
-                <a href="post.html" class="content-wrapper__image">
-                  <img
-                    src="https://images.unsplash.com/photo-1560185009-5bf9f2849488?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
-                    alt="this-is-image"
-                  />
-                </a>
-                <div class="content-wrapper__content">
-                  <h3 class="title-link">
-                    <a href="post.html">
-                      Vietnam Forest Museum(VFM) receiving Leopard’s body for
-                      exhibiting and conservation education
+                  <div class="content-wrapper__content">
+                    <h3 class="title-link">
+                      <a href="#!">Introduction About VietNam Forest Musem</a>
+                    </h3>
+                    <div class="date">
+                      <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
+                      <span><i class="fa fa-eye"></i> 17 lượt xem</span>
+                    </div>
+                    <p class="description">
+                      Vietnam Forest Museum is a civil service unit under Forest
+                      Inventory and Planning Institute (FIPI). The Museum takes
+                      over the functions to research, collect, store, display
+                    </p>
+                    <a class="button button--third" href="#!">
+                      Xem chi tiết
+                      <img src="./images/more-right.png" alt="this-is-icon" />
                     </a>
-                  </h3>
-                  <div class="date">
-                    <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
-                    <span><i class="fa fa-eye"></i> 17 lượt xem</span>
                   </div>
-                  <p class="description">
-                    Vietnam Forest Museum is a civil service unit under Forest
-                    Inventory and Planning Institute (FIPI). The Museum takes
-                    over the functions to research, collect, store, display
-                  </p>
-                  <a class="button button--third" href="post.html">
-                    Xem chi tiết
-                    <img src="./images/more-right.png" alt="this-is-icon" />
-                  </a>
                 </div>
-              </div>
-              <div class="content-wrapper__item">
-                <a href="post.html" class="content-wrapper__image">
-                  <img
-                    src="https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
-                    alt="this-is-image"
-                  />
-                </a>
-                <div class="content-wrapper__content">
-                  <h3 class="title-link">
-                    <a href="post.html">
-                      functions and tasks
+                <div class="content-wrapper__item">
+                  <a href="#!" class="content-wrapper__image">
+                    <img
+                      src="https://images.unsplash.com/photo-1503174971373-b1f69850bded?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1213&q=80"
+                      alt="this-is-image"
+                    />
+                  </a>
+                  <div class="content-wrapper__content">
+                    <h3 class="title-link">
+                      <a href="#!"
+                        >Launching ceremony of vietnam forest museum and
+                        scientific workshop “establishment and development of
+                        vietnam forest museum"</a
+                      >
+                    </h3>
+                    <div class="date">
+                      <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
+                      <span><i class="fa fa-eye"></i> 17 lượt xem</span>
+                    </div>
+                    <p class="description">
+                      Vietnam Forest Museum is a civil service unit under Forest
+                      Inventory and Planning Institute (FIPI). The Museum takes
+                      over the functions to research, collect, store, display
+                    </p>
+                    <a class="button button--third" href="#!">
+                      Xem chi tiết
+                      <img src="./images/more-right.png" alt="this-is-icon" />
                     </a>
-                  </h3>
-                  <div class="date">
-                    <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
-                    <span><i class="fa fa-eye"></i> 17 lượt xem</span>
                   </div>
-                  <p class="description">
-                    Vietnam Forest Museum is a civil service unit under Forest
-                    Inventory and Planning Institute (FIPI). The Museum takes
-                    over the functions to research, collect, store, display
-                  </p>
-                  <a class="button button--third" href="post.html">
-                    Xem chi tiết
-                    <img src="./images/more-right.png" alt="this-is-icon" />
+                </div>
+                <div class="content-wrapper__item">
+                  <a href="#!" class="content-wrapper__image">
+                    <img
+                      src="https://images.unsplash.com/photo-1560185009-5bf9f2849488?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                      alt="this-is-image"
+                    />
                   </a>
+                  <div class="content-wrapper__content">
+                    <h3 class="title-link">
+                      <a href="#!">
+                        Vietnam Forest Museum(VFM) receiving Leopard’s body for
+                        exhibiting and conservation education
+                      </a>
+                    </h3>
+                    <div class="date">
+                      <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
+                      <span><i class="fa fa-eye"></i> 17 lượt xem</span>
+                    </div>
+                    <p class="description">
+                      Vietnam Forest Museum is a civil service unit under Forest
+                      Inventory and Planning Institute (FIPI). The Museum takes
+                      over the functions to research, collect, store, display
+                    </p>
+                    <a class="button button--third" href="#!">
+                      Xem chi tiết
+                      <img src="./images/more-right.png" alt="this-is-icon" />
+                    </a>
+                  </div>
+                </div>
+                <div class="content-wrapper__item">
+                  <a href="#!" class="content-wrapper__image">
+                    <img
+                      src="https://images.unsplash.com/photo-1493809842364-78817add7ffb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                      alt="this-is-image"
+                    />
+                  </a>
+                  <div class="content-wrapper__content">
+                    <h3 class="title-link">
+                      <a href="#!">
+                        functions and tasks
+                      </a>
+                    </h3>
+                    <div class="date">
+                      <span><i class="fa fa-calendar-alt"></i> 05/10/2022</span>
+                      <span><i class="fa fa-eye"></i> 17 lượt xem</span>
+                    </div>
+                    <p class="description">
+                      Vietnam Forest Museum is a civil service unit under Forest
+                      Inventory and Planning Institute (FIPI). The Museum takes
+                      over the functions to research, collect, store, display
+                    </p>
+                    <a class="button button--third" href="#!">
+                      Xem chi tiết
+                      <img src="./images/more-right.png" alt="this-is-icon" />
+                    </a>
+                  </div>
                 </div>
               </div>
-            </div>
           </div>
           <div class="content-wrapper__right">
             <div class="block-title">
@@ -363,6 +438,8 @@
         </div>
       </div>
     </div>
+
+    
 
     <div class="footer">
       <div class="container">
