--- a/exhibitions.html
+++ b/exhibitions.html
@@ -23,10 +23,6 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/fullpage.js@3/dist/fullpage.min.css"
-    />
   </head>
   <body>
     <div class="hotline">
@@ -168,9 +164,33 @@
                     />Museum library</a
                   >
                   <ul class="header__submenu">
-                    <li><a href="#!">Photo library</a></li>
-                    <li><a href="#!">Video Library</a></li>
-                    <li><a href="#!">Document Library</a></li>
+                    <li>
+                      <a href="#!">Photo library</a>
+                      <ul class="header__submenu-last">
+                        <li><a href="#!">Text 1</a></li>
+                        <li><a href="#!">Text 2</a></li>
+                        <li><a href="#!">Text 3</a></li>
+                        <li><a href="#!">Text 4</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="#!">Video Library</a>
+                      <ul class="header__submenu-last">
+                        <li><a href="#!">Text 1</a></li>
+                        <li><a href="#!">Text 2</a></li>
+                        <li><a href="#!">Text 3</a></li>
+                        <li><a href="#!">Text 4</a></li>
+                      </ul>
+                    </li>
+                    <li>
+                      <a href="#!">Document Library</a>
+                      <ul class="header__submenu-last">
+                        <li><a href="#!">Text 1</a></li>
+                        <li><a href="#!">Text 2</a></li>
+                        <li><a href="#!">Text 3</a></li>
+                        <li><a href="#!">Text 4</a></li>
+                      </ul>
+                    </li>
                   </ul>
                 </li>
                 <li>
@@ -443,7 +463,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fullpage.js@3/dist/fullpage.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery.Marquee/1.5.0/jquery.marquee.min.js"></script>
     <script src="./js/main.js"></script>
   </body>
