--- a/index.html
+++ b/index.html
@@ -171,9 +171,33 @@
                       />Museum library</a
                     >
                     <ul class="header__submenu">
-                      <li><a href="#!">Photo library</a></li>
-                      <li><a href="#!">Video Library</a></li>
-                      <li><a href="#!">Document Library</a></li>
+                      <li>
+                        <a href="#!">Photo library</a>
+                        <ul class="header__submenu-last">
+                          <li><a href="#!">Text 1</a></li>
+                          <li><a href="#!">Text 2</a></li>
+                          <li><a href="#!">Text 3</a></li>
+                          <li><a href="#!">Text 4</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#!">Video Library</a>
+                        <ul class="header__submenu-last">
+                          <li><a href="#!">Text 1</a></li>
+                          <li><a href="#!">Text 2</a></li>
+                          <li><a href="#!">Text 3</a></li>
+                          <li><a href="#!">Text 4</a></li>
+                        </ul>
+                      </li>
+                      <li>
+                        <a href="#!">Document Library</a>
+                        <ul class="header__submenu-last">
+                          <li><a href="#!">Text 1</a></li>
+                          <li><a href="#!">Text 2</a></li>
+                          <li><a href="#!">Text 3</a></li>
+                          <li><a href="#!">Text 4</a></li>
+                        </ul>
+                      </li>
                     </ul>
                   </li>
                   <li>
@@ -897,6 +921,84 @@
           </div>
         </div>
       </div>
+
+      <div class="section">
+        <div class="events">
+          <div class="container">
+            <h2>
+              <a href="#!" class="heading heading--primary">Events</a>
+            </h2>
+            <p class="events__description">
+              Bảo tàng đã và đang lưu giữ Bộ mẫu vật về tài nguyên rừng gồm:
+              Động vật (với đa dạng các lớp: chim, thú, bò sát, lưỡng cư,…),
+              thực vật và côn trùng
+            </p>
+            <div class="events__carousel owl-carousel owl-theme">
+              <div class="events__carousel-item item">
+                <h3><a href="#!"> Ngày Trái Đất 2023 – Earth Day 2023 </a></h3>
+                <a href="#!" class="events__carousel-image">
+                  <img
+                    src="https://images.unsplash.com/photo-1509909756405-be0199881695?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                    alt="this-is-image"
+                  />
+                </a>
+                <p>
+                  Tại Bảo tàng Tài nguyên Rừng, đội ngũ cán bộ công nhân viên
+                  của Bảo tàng Tài nguyên Rừng cũng hưởng ứng Ngày Môi trường
+                  Thế giới bằng những hoạt động thiết thực, cùng nhau bảo vệ
+                  hành tinh xanh
+                </p>
+              </div>
+              <div class="events__carousel-item item">
+                <h3><a href="#!"> Ngày Trái Đất 2023 – Earth Day 2023 </a></h3>
+                <a href="#!" class="events__carousel-image">
+                  <img
+                    src="https://images.unsplash.com/photo-1509909756405-be0199881695?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                    alt="this-is-image"
+                  />
+                </a>
+                <p>
+                  Tại Bảo tàng Tài nguyên Rừng, đội ngũ cán bộ công nhân viên
+                  của Bảo tàng Tài nguyên Rừng cũng hưởng ứng Ngày Môi trường
+                  Thế giới bằng những hoạt động thiết thực, cùng nhau bảo vệ
+                  hành tinh xanh
+                </p>
+              </div>
+              <div class="events__carousel-item item">
+                <h3><a href="#!"> Ngày Trái Đất 2023 – Earth Day 2023 </a></h3>
+                <a href="#!" class="events__carousel-image">
+                  <img
+                    src="https://images.unsplash.com/photo-1509909756405-be0199881695?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                    alt="this-is-image"
+                  />
+                </a>
+                <p>
+                  Tại Bảo tàng Tài nguyên Rừng, đội ngũ cán bộ công nhân viên
+                  của Bảo tàng Tài nguyên Rừng cũng hưởng ứng Ngày Môi trường
+                  Thế giới bằng những hoạt động thiết thực, cùng nhau bảo vệ
+                  hành tinh xanh
+                </p>
+              </div>
+              <div class="events__carousel-item item">
+                <h3><a href="#!"> Ngày Trái Đất 2023 – Earth Day 2023 </a></h3>
+                <a href="#!" class="events__carousel-image">
+                  <img
+                    src="https://images.unsplash.com/photo-1509909756405-be0199881695?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                    alt="this-is-image"
+                  />
+                </a>
+                <p>
+                  Tại Bảo tàng Tài nguyên Rừng, đội ngũ cán bộ công nhân viên
+                  của Bảo tàng Tài nguyên Rừng cũng hưởng ứng Ngày Môi trường
+                  Thế giới bằng những hoạt động thiết thực, cùng nhau bảo vệ
+                  hành tinh xanh
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <div class="section">
         <div class="footer-home">
           <div class="container">
