--- a/search.html
+++ b/search.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>text</title>
     <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/search.css" />
     <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+    <title>Tìm kiếm</title>
   </head>
   <body>
     <div class="hotline">
@@ -164,33 +165,9 @@
                     />Museum library</a
                   >
                   <ul class="header__submenu">
-                    <li>
-                      <a href="#!">Photo library</a>
-                      <ul class="header__submenu-last">
-                        <li><a href="#!">Text 1</a></li>
-                        <li><a href="#!">Text 2</a></li>
-                        <li><a href="#!">Text 3</a></li>
-                        <li><a href="#!">Text 4</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a href="#!">Video Library</a>
-                      <ul class="header__submenu-last">
-                        <li><a href="#!">Text 1</a></li>
-                        <li><a href="#!">Text 2</a></li>
-                        <li><a href="#!">Text 3</a></li>
-                        <li><a href="#!">Text 4</a></li>
-                      </ul>
-                    </li>
-                    <li>
-                      <a href="#!">Document Library</a>
-                      <ul class="header__submenu-last">
-                        <li><a href="#!">Text 1</a></li>
-                        <li><a href="#!">Text 2</a></li>
-                        <li><a href="#!">Text 3</a></li>
-                        <li><a href="#!">Text 4</a></li>
-                      </ul>
-                    </li>
+                    <li><a href="#!">Photo library</a></li>
+                    <li><a href="#!">Video Library</a></li>
+                    <li><a href="#!">Document Library</a></li>
                   </ul>
                 </li>
                 <li>
@@ -222,38 +199,112 @@
           <li>
             <a href="#!"> Trang chủ</a>
           </li>
-          <li><a href="#!">Giới thiệu</a></li>
-          <li><a href="#!">Tin tức</a></li>
+          <li><a href="#!">Tìm kiếm</a></li>
         </ul>
       </div>
     </div>
 
-    <div class="content">
-      <div class="library">
-        <div class="container">
-          <div class="library-wrapper">
-            <a href="#!" class="library-wrapper__item">
+    <div class="search">
+      <div class="container">
+        <div class="search__wrapper">
+          <input
+            class="search__wrapper-input"
+            type="text"
+            placeholder="Gõ từ khóa tìm kiếm"
+          />
+          <a class="search__wrapper-button" href="#!"
+            ><i class="fa-pull-left fa fa-search" aria-hidden="true"></i>Tìm
+            kiếm</a
+          >
+        </div>
+        <h2>
+          <a class="heading heading--primary" href="#!">
+            Tìm thấy 5 kết quả tìm kiếm với từ khóa "tin tức"
+          </a>
+        </h2>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="articles">
+        <div class="articles-wrapper">
+          <div class="articles-item">
+            <div class="articles-item__image">
               <img
-                class="library-wrapper__image"
-                src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80"
                 alt="this-is-image"
               />
-              <div class="library-wrapper__content">
-                <span><i class="fa fa-image"></i></span>
-                <h3>Anh demo 2</h3>
+            </div>
+            <div class="articles-item__content">
+              <h3 class="title-link">
+                <a href="#!"> INTERNATIONAL WOMEN'S DAY MARCH 8th 2023 </a>
+              </h3>
+              <div class="date">
+                <span><i class="fa fa-calendar-alt"></i> 05/08/2022</span>
+                <span><i class="fa fa-eye"></i> 120 lượt xem</span>
               </div>
-            </a>
-            <a href="#!" class="library-wrapper__item">
+              <div class="description">
+                With the importance and threats to the biodiversity of all
+                ecosystems, May 22nd is designated as the International Day for
+                Conservation of Biological Diversity by the United Nations. This
+                year's theme for the International Day for Conservation of
+                Biodiversity is: “From agreements to action: Build back
+                Biodiversity”, to remind us that, we need to take action to
+                prevent climate change.
+              </div>
+            </div>
+          </div>
+          <div class="articles-item">
+            <div class="articles-item__image">
               <img
-                class="library-wrapper__image"
-                src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80"
                 alt="this-is-image"
               />
-              <div class="library-wrapper__content">
-                <span><i class="fa fa-image"></i></span>
-                <h3>Anh demo 2</h3>
+            </div>
+            <div class="articles-item__content">
+              <h3 class="title-link">
+                <a href="#!"> INTERNATIONAL WOMEN'S DAY MARCH 8th 2023 </a>
+              </h3>
+              <div class="date">
+                <span><i class="fa fa-calendar-alt"></i> 05/08/2022</span>
+                <span><i class="fa fa-eye"></i> 120 lượt xem</span>
               </div>
-            </a>
+              <div class="description">
+                With the importance and threats to the biodiversity of all
+                ecosystems, May 22nd is designated as the International Day for
+                Conservation of Biological Diversity by the United Nations. This
+                year's theme for the International Day for Conservation of
+                Biodiversity is: “From agreements to action: Build back
+                Biodiversity”, to remind us that, we need to take action to
+                prevent climate change.
+              </div>
+            </div>
+          </div>
+          <div class="articles-item">
+            <div class="articles-item__image">
+              <img
+                src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&amp;ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&amp;auto=format&amp;fit=crop&amp;w=1170&amp;q=80"
+                alt="this-is-image"
+              />
+            </div>
+            <div class="articles-item__content">
+              <h3 class="title-link">
+                <a href="#!"> INTERNATIONAL WOMEN'S DAY MARCH 8th 2023 </a>
+              </h3>
+              <div class="date">
+                <span><i class="fa fa-calendar-alt"></i> 05/08/2022</span>
+                <span><i class="fa fa-eye"></i> 120 lượt xem</span>
+              </div>
+              <div class="description">
+                With the importance and threats to the biodiversity of all
+                ecosystems, May 22nd is designated as the International Day for
+                Conservation of Biological Diversity by the United Nations. This
+                year's theme for the International Day for Conservation of
+                Biodiversity is: “From agreements to action: Build back
+                Biodiversity”, to remind us that, we need to take action to
+                prevent climate change.
+              </div>
+            </div>
           </div>
         </div>
       </div>
