--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
     <div class="error-404">
       <div class="error-notify">
         <div class="container">
-          <img class="error-notify__image" src="/images/404.png" alt="404" />
+          <img class="error-notify__image" src="./images/404.png" alt="404" />
           <div class="content-notify">
             <h2 class="title-error">
               Trang bạn tìm hiện không có hoặc vì một lý do nào đó không tồn tại
