--- a/search.html
+++ b/search.html
@@ -6,23 +6,23 @@
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/search.css" />
     <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
-    integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
-    integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Tìm kiếm</title>
   </head>
   <body>
@@ -307,6 +307,26 @@
             </div>
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="pagination">
+      <div class="container pagination__container">
+        <a class="pagination__link" href="#!">Đầu</a>
+        <a class="pagination__link active" href="#">1</a>
+        <a class="pagination__link" href="#!">2</a>
+        <a class="pagination__link" href="#!">3</a>
+        <a class="pagination__link" href="#!">4</a>
+        <a class="pagination__link" href="#!">5</a>
+        <a class="pagination__link" href="#!">6</a>
+        <a class="pagination__link" href="#!">7</a>
+        <a class="pagination__link" href="#!">8</a>
+        <a class="pagination__link" href="#!">9</a>
+        <a class="pagination__link" href="#!">10</a>
+        <a class="pagination__link" href="#!"
+          ><img src="./images/next-pagination.png" alt="this-is-icon"
+        /></a>
+        <a class="pagination__link" href="#!">Cuối</a>
       </div>
     </div>
 
