--- a/index.html
+++ b/index.html
@@ -449,11 +449,21 @@
           </div>
         </div>
       </div>
-      <div class="section">
+      <div id="section-news" class="section">
+        <video
+          id="myVideo"
+          oncontextmenu="return false;"
+          autoplay
+          muted
+          loop
+          playsinline
+        >
+          <source src="./video/section-news.webm" type="video/webm" />
+        </video>
         <div class="news">
           <div class="container">
             <h2>
-              <a class="heading heading--primary" href="#!"> News </a>
+              <a class="heading heading--light" href="#!"> News </a>
             </h2>
             <div class="news__tab">
               <a href="#!" class="news__tab-item active">
@@ -469,7 +479,7 @@
                 <div class="news__content-item">
                   <a href="#!" class="news__content-image">
                     <img
-                      src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                      src="https://images.unsplash.com/photo-1542273917363-3b1817f69a2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1174&q=80"
                       alt="this-is-image"
                     />
                   </a>
@@ -483,7 +493,7 @@
                 <div class="news__content-item">
                   <a href="#!" class="news__content-image">
                     <img
-                      src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                      src="https://images.unsplash.com/photo-1511497584788-876760111969?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1632&q=80"
                       alt="this-is-image"
                     />
                   </a>
@@ -497,7 +507,7 @@
                 <div class="news__content-item">
                   <a href="#!" class="news__content-image">
                     <img
-                      src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                      src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                       alt="this-is-image"
                     />
                   </a>
@@ -511,7 +521,7 @@
                 <div class="news__content-item">
                   <a href="#!" class="news__content-image">
                     <img
-                      src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
+                      src="https://images.unsplash.com/photo-1465189684280-6a8fa9b19a7a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1170&q=80"
                       alt="this-is-image"
                     />
                   </a>
